fix overflow ul, media query #call-to-action

--- a/css/style.css
+++ b/css/style.css
@@ -341,8 +341,8 @@ main {
 
 
 .lists {
-    
-    scrollbar-color: var(--grey);
+    height: 90%;
+    overflow: hidden;
 }
 
 .lists a:hover {
@@ -360,7 +360,7 @@ main {
 }
 
 .lists ul {
-    height: 80%;
+    height: 50%;
     overflow-y: auto;
 }
 
@@ -375,6 +375,12 @@ main {
     border-left: .2rem solid var(--accent);
 
 }
+
+.playlist {
+    height: 90%;
+    overflow: hidden;
+}
+
 
 .playlist a {
     color: var(--grey);
@@ -469,7 +475,10 @@ main {
     width: 100%;
     height: 3px;
     border-radius: 10px;
-
+    background-image: linear-gradient(#ffffff, #ffffff);
+    background-size: 35%;
+    background-repeat: no-repeat;
+    
 
 }
 
@@ -589,6 +598,12 @@ main {
     .hamburger:hover {
         color: white;
         cursor: pointer;
+    }
+}
+
+@media screen and (max-height: 90px) {
+    #call-to-action {
+        display: none;
     }
 }
 
